--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title Rangetracker
+    %title Zebra
     :css
       body {padding-top: 60px;}
     = javascript_include_tag "/js/jquery_1.8.2.min.js"
