--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,8 @@
             %ul.nav
               %li
                 %a{ :href=>'/'} Home
+              %li
+                %a{ :href=>'/print'} Print
 
     .container
       = yield
