--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,15 +8,15 @@
     = javascript_include_tag "/js/bootstrap.js"
     = stylesheet_link_tag "/stylesheets/bootstrap.css"
   %body
-    .navbar.navbar-fixed-top.navbar-inverse
+    .navbar.navbar-fixed-top
       .navbar-inner
-        .container
-          .nav-collapse.collapse
-            %ul.nav
-              %li
-                %a{ :href=>'/'} Home
-              %li
-                %a{ :href=>'/print'} Print
+        %a.brand{:href => '/'}
+          %img{:src => '/img/logo.png'}
+        %ul.nav
+          %li
+            %a{ :href=>'/'} Home
+          %li
+            %a{ :href=>'/print'} Print
 
     .container
       = yield
